--- a/templates/head.html
+++ b/templates/head.html
@@ -4,6 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Covoiturage Urbain</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <script src="/static/htmx.min.js"></script>
 </head>
 {{end}}
