--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,10 @@
 {{template "layout-start" .}}
 <h2>Connexion</h2>
-<form id="login-form" method="post">
+<form 
+id="login-form"
+  hx-post="/login"
+  hx-target="#app"
+  hx-swap="outerHTML">
   <input name="email" type="email" placeholder="Email" required />
   <input name="password" type="password" placeholder="Password" required />
   <button type="submit">Se connecter</button>
